--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-    <link rel=" stylesheet" href="/CURRICULUM copy/ESTILO2.css">
+    <link rel=" stylesheet" href="ESTILO2.css">
 </head>
 <body>
 
   
     <header>
-        <img id="banner" src="/CURRICULUM copy/LAIN_BORDER3.png" alt="Banner Image"/>       
-        <img id="FOTO" src="/CURRICULUM copy/PHOTO_ID.png" alt="Foto estilo DNI de una mujer de pelo corto">
+        <img id="banner" src="LAIN_BORDER3.png" alt="Banner Image"/>       
+        <img id="FOTO" src="PHOTO_ID.png" alt="Foto estilo DNI de una mujer de pelo corto">
     </header>
     <h1 id="Hola">Hola Usuario!<br>Soy Leah Byrd</h1>
   
@@ -33,7 +33,7 @@
       </article>
     </section>
     
-    <img id="LOGOS4" src="/CURRICULUM copy/Logos/LOGOS.png" usemap="#image-map"> 
+    <img id="LOGOS4" src="Logos/LOGOS.png" usemap="#image-map"> 
       <map name="image-map">
         <area target="" alt="Twitter" title="Twitter" href="https://twitter.com/twitter?lang=es" coords="30,31,26" shape="circle">
         <area target="" alt="Email" title="Email" href="mailto:seansuper616@gmail.com" coords="104,31,25" shape="circle">
@@ -41,7 +41,7 @@
         <area target="" alt="Whatsapp web" title="Whatsapp web" href="wa.link/30yb0e" coords="252,30,25" shape="circle">
     </map>
 
-    <a style="text-decoration: none;" href="PORTAFOLIO.html"><img id="button_page_down" src="/CURRICULUM copy/BOTON_BAJAR.png" alt="button_page_down">
+    <a style="text-decoration: none;" href="PORTAFOLIO.html"><img id="button_page_down" src="BOTON_BAJAR.png" alt="button_page_down">
     </a>
     </body>
     </html>
