--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   
     <header>
         <img id="banner" src="/CURRICULUM copy/LAIN_BORDER3.png" alt="Banner Image"/>       
-        <img id="FOTO" src="/CURRICULUM copy/PHOTO_ID.png" alt="Foto estilo DNI de una mujer de pelo corto">
+        <img id="FOTO" src="/CURRICULUM copy/PHOTO_IDD-FINAL.png" alt="Foto estilo DNI">
     </header>
-    <h1 id="Hola">Hola Usuario!<br>Soy Leah Byrd</h1>
+    <h1 id="Hola">Hola Usuario!<br>Soy Ana Fiorella</h1>
   
 
     <section>
@@ -36,7 +36,7 @@
     <img id="LOGOS4" src="/CURRICULUM copy/Logos/LOGOS.png" usemap="#image-map"> 
       <map name="image-map">
         <area target="" alt="Twitter" title="Twitter" href="https://twitter.com/twitter?lang=es" coords="30,31,26" shape="circle">
-        <area target="" alt="Email" title="Email" href="mailto:seansuper616@gmail.com" coords="104,31,25" shape="circle">
+        <area target="" alt="Email" title="Email" href="mailto:f.trabajo.999@gmail.com" coords="104,31,25" shape="circle">
         <area target="" alt="Facebook" title="Facebook" href="https://www.facebook.com/facebook" coords="177,31,25" shape="circle">
         <area target="" alt="Whatsapp web" title="Whatsapp web" href="wa.link/30yb0e" coords="252,30,25" shape="circle">
     </map>
