--- a/Experiencia.html
+++ b/Experiencia.html
@@ -43,7 +43,7 @@
             </a>
           <p2 id="Lorem"> <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin scelerisque ante, nec blandit lectus lacinia in. Etiam et maximus justo, vel facilisis diam. Vestibulum ut lorem consequat ipsum congue bibendum. Vivamus erat metus, tincidunt eu sollicitudin non, congue ac ligula. Sed ultrices lorem vel tortor ultrices, sit amet venenatis magna congue. Donec feugiat vitae mi in elementum. Donec posuere sagittis urna id volutpat. </p>
 
-        <!--Empresa 3-->
+        <!--Empresa 3 WHY THE FUCK WONT IT CHANGE BRUH-->
               <a style="text-decoration: none;" href="https://es.m.wikipedia.org/wiki/Wikipedia:Portada"> 
                 <p1 id="Acerca_de">&#9679 <img id="Logo_Youtube" 
                 src="/CURRICULUM copy/Logos/Logo_wikipedia.png" alt="Logo_wikipedia"> Wikipedia: 2002 - 2003        
