--- a/CURRICULUM.html
+++ b/CURRICULUM.html
@@ -8,6 +8,7 @@
     <link rel=" stylesheet" href="/CURRICULUM copy/ESTILO2.css">
 </head>
 <body>
+        <!--Empresa 3 CHANGE-->
 
   
     <header>
