--- a/PORTAFOLIO.html
+++ b/PORTAFOLIO.html
@@ -8,7 +8,7 @@
     <link rel=" stylesheet" href="/CURRICULUM copy/ESTILO_PAGINA2.css">
 </head>
 <body>
-  
+  <!--Empresa 3 CHANGE-->
     <header>
         <img id="banner" src="/CURRICULUM copy/PORTAFOLIO_BORDER.png" alt="Banner Image"/>       
         <img id="FOTO" src="/CURRICULUM copy/PHOTO_IDD-FINAL.png" alt="Foto estilo DNI">
