--- a/CURRICULUM.html
+++ b/CURRICULUM.html
@@ -12,6 +12,7 @@
 
   
     <header>
+      <!--Empresa 3 CHANGE-->
         <img id="banner" src="/CURRICULUM copy/LAIN_BORDER3.png" alt="Banner Image"/>       
         <img id="FOTO" src="/CURRICULUM copy/PHOTO_IDD-FINAL.png" alt="Foto estilo DNI">
     </header>
